--- a/package.json
+++ b/package.json
@@ -40,14 +40,23 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@stripe/connect-js": "^3.3.21",
     "@stripe/react-connect-js": "^3.3.21",
+    "@stripe/stripe-js": "^6.1.0",
+    "@tiptap/extension-image": "^2.11.5",
+    "@tiptap/extension-link": "^2.11.5",
+    "@tiptap/extension-placeholder": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "dompurify": "^3.2.4",
     "embla-carousel-react": "8.5.1",
     "firebase": "^11.4.0",
     "input-otp": "1.4.1",
+    "install": "^0.13.0",
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
     "next-themes": "latest",
@@ -55,8 +64,13 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
+    "react-markdown": "^10.1.0",
+    "react-quill": "^2.0.0",
     "react-resizable-panels": "^2.1.7",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "2.15.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
