--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@tiptap/starter-kit": "^2.11.5",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.4",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -55,6 +56,7 @@
     "dompurify": "^3.2.4",
     "embla-carousel-react": "8.5.1",
     "firebase": "^11.4.0",
+    "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
     "install": "^0.13.0",
     "lucide-react": "^0.454.0",
@@ -78,9 +80,12 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "firebase-tools": "^14.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
