--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-switch": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@stream-io/node-sdk": "^0.4.22",
+    "@stream-io/video-react-sdk": "^1.14.3",
     "@stripe/connect-js": "^3.3.21",
     "@stripe/react-connect-js": "^3.3.21",
     "@stripe/stripe-js": "^6.1.0",
@@ -46,6 +48,7 @@
     "@tiptap/extension-placeholder": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "@types/jsonwebtoken": "^9.0.9",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.4",
     "canvas-confetti": "^1.9.3",
@@ -56,13 +59,16 @@
     "dompurify": "^3.2.4",
     "embla-carousel-react": "8.5.1",
     "firebase": "^11.4.0",
+    "firebase-admin": "^13.2.0",
     "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
     "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
     "next-themes": "latest",
     "react": "^19",
+    "react-datepicker": "^8.3.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
@@ -76,6 +82,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
