--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@sendgrid/mail": "^8.1.5",
     "@stream-io/node-sdk": "^0.4.22",
     "@stream-io/video-react-sdk": "^1.14.3",
     "@stripe/connect-js": "^3.3.21",
@@ -64,6 +65,7 @@
     "input-otp": "1.4.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
     "next-themes": "latest",
