--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
     "next-themes": "latest",
+    "qrcode": "^1.5.4",
     "react": "^19",
     "react-datepicker": "^8.3.0",
     "react-day-picker": "8.10.1",
@@ -82,6 +83,7 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^1.7.1",
+    "speakeasy": "^2.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
@@ -91,9 +93,11 @@
   "devDependencies": {
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^22",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/speakeasy": "^2.0.10",
     "firebase-tools": "^14.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
