--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.454.0",
+    "marked": "^16.1.2",
     "next": "15.1.0",
     "next-themes": "latest",
     "qrcode": "^1.5.4",
@@ -92,6 +93,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^22",
     "@types/qrcode": "^1.5.5",
