feat: add verify code logic

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "marked": "^16.1.2",
     "next": "15.1.0",
     "next-themes": "latest",
+    "nodemailer": "^7.0.6",
     "qrcode": "^1.5.4",
     "react": "^19",
     "react-datepicker": "^8.3.0",
@@ -97,6 +98,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^22",
+    "@types/nodemailer": "^7.0.1",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
