--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^43.3.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
     "@firebasegen/example-connector": "link:dataconnect-generated/js/example-connector",
     "@hello-pangea/dnd": "latest",
     "@hookform/resolvers": "^3.9.1",
