--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash": "^4.17.20",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.4",
     "canvas-confetti": "^1.9.3",
@@ -70,6 +71,7 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
     "marked": "^16.1.2",
     "next": "15.1.0",
